[package]
name = "eto-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "eto"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
glob = "0.3.0"
sysinfo = "0.26.6"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
eto = { path = "../eto" }
