[package]
name = "eto-cli"
version = "0.2.1"
license = "MIT OR Apache-2.0"
description = "A small updater's CLI tool."
repository = "https://github.com/celphase/eto"
edition = "2021"

[[bin]]
name = "eto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.14", features = ["derive"] }
glob = "0.3.0"
sysinfo = "0.27.0"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
eto = { version = "0.2.0", path = "../eto" }
