[package]
name = "eto"
version = "0.2.2"
license = "MIT OR Apache-2.0"
description = "A small updater."
repository = "https://github.com/celphase/eto"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
flate2 = "1.0.25"
glob = "0.3.0"
pathdiff = "0.2.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha256 = "1.0.3"
tar = "0.4.38"
tracing = "0.1.36"
walkdir = "2.3.2"
